Remove double slash in database path creation
Visible to the user in some error conditions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     Thanks to Simon Richter <sjr@debian.org>.
   * When aborting due to file conflicts print the version of the conflicted
     package. Closes: #540019
+  * Remove double slash in database path visible to the user in some error
+    conditions.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
