dpkg-scanpackages: add support for extra override file
Based-on-patch-by: Robert Millan <rmh@aybabtu.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     Closes: #537800
   * Fix update-alternatives to mention the correct slave link that can't
     be installed due to a conflicting file instead of quoting the master link.
+  * Add support for extra override file in dpkg-scanpackages. Thanks to Robert
+    Millan for the patch. Closes: #537559
 
   [ Modestas Vainius ]
   * Provide a meaningful label for dpkg-gensymbols diff.
