dpkg-scanpackages(1): correctly refer to the deb-overrides manual page

--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -60,7 +60,8 @@ this string.
 .PP
 .I overridefile
 is the name of a file to read which contains information about how the
-package fits into the distribution; see below.
+package fits into the distribution; see
+.BR deb\-override (5).
 .PP
 .I pathprefix
 is an optional string to be prepended to the Filename fields.
