--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -577,6 +577,9 @@ Statuses of available packages. This file contains information about
 whether a package is marked for removing or not, whether it is
 installed or not, etc. See section \fBINFORMATION ABOUT PACKAGES\fP
 for more info.
+
+The status file is backed up daily in \fI/var/backups\fP. It can be
+useful if it's lost or corrupted due to filesystems troubles.
 .P
 The following files are components of a binary package. See \fBdeb\fP(5)
 for more information about them:
