Do not match sparc architecture with sparc64-*-* triplet
A sparc64 userland needs a different Debian architecture, as each
GNU triplet should maps 1:1 to a Debian architecture.

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     package. Closes: #540019
   * Remove double slash in database path visible to the user in some error
     conditions.
+  * Stop macthing sparc64-*-* GNU triplets with sparc Debian architecture.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
