Update german translation of manual pages
Update to 1619t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-08-15 18:15+0200\n"
+"PO-Revision-Date: 2009-08-16 09:28+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -4471,6 +4471,24 @@ msgstr "\\s-1DEB_BUILD_ARCH_CPU\\s0"
 msgid "The Debian cpu name of the build machine."
 msgstr "Der Debian-CPU-Name der Baumaschine."
 
+#: ../../man/dpkg-architecture.1:108 ../../man/dpkg-architecture.1:124
+#, no-wrap
+msgid "\\s-1DEB_BUILD_ARCH_BITS\\s0"
+msgstr "\\s-1DEB_BUILD_ARCH_BITS\\s0"
+
+#: ../../man/dpkg-architecture.1:110
+msgid "The pointer size of the build machine (in bits)."
+msgstr "Die Zeigergröße der Baumaschine in Bits."
+
+#: ../../man/dpkg-architecture.1:110 ../../man/dpkg-architecture.1:126
+#, no-wrap
+msgid "\\s-1DEB_BUILD_ARCH_ENDIAN\\s0"
+msgstr "\\s-1DEB_BUILD_ARCH_ENDIAN\\s0"
+
+#: ../../man/dpkg-architecture.1:112
+msgid "The endianness of the build machine (little / big)."
+msgstr "Die Endianness der Baumaschine (little/big)."
+
 #. type: IP
 #: ../../man2/dpkg-architecture.1:108
 #, no-wrap
@@ -4536,6 +4554,14 @@ msgstr "\\s-1DEB_HOST_ARCH_CPU\\s0"
 #: ../../man2/dpkg-architecture.1:120
 msgid "The Debian cpu name of the host machine."
 msgstr "Der Debian-CPU-Name der Host-Maschine."
+
+#: ../../man/dpkg-architecture.1:126
+msgid "The pointer size of the host machine (in bits)."
+msgstr "Die Zeigergröße der Host-Maschine in Bits."
+
+#: ../../man/dpkg-architecture.1:128
+msgid "The endianness of the host machine (little / big)."
+msgstr "Die Endianness der Host-Maschine (little/big)."
 
 #. type: IP
 #: ../../man2/dpkg-architecture.1:120
@@ -4695,6 +4721,28 @@ msgstr ""
 #, no-wrap
 msgid "BACKWARD COMPATIBILITY"
 msgstr "RÜCKWÄRTSKOMPATIBILITÄT"
+
+# type: Plain text
+#: ../../man/dpkg-architecture.1:193
+msgid ""
+"The DEB_*_ARCH_BITS and DEB_*_ARCH_ENDIAN variables were introduced in dpkg-"
+"dev 1.15.4. Using them in I<debian/rules> thus requires a build-dependency "
+"on dpkg-dev (E<gt>= 1.15.4)."
+msgstr ""
+"Die Variablen DEB_*_ARCH_BITS und DEB_*_ARCH_ENDIAN wurden in dpkg-dev 1.15.4 ""eingeführt. Werden sie in I<debian/rules> verwandt, benötigen sie daher eine "
+"Bauabhängigkeit von dpkg-dev (E<gt>= 1.15.4)."
+
+#: ../../man/dpkg-architecture.1:198
+msgid ""
+"The DEB_HOST_ARCH_CPU and DEB_HOST_ARCH_OS variables were introduced in dpkg-"
+"dev 1.13.2. Before this I<debian/rules> files tended to check the values of "
+"the DEB_HOST_GNU_CPU or DEB_HOST_GNU_TYPE variables which have been subject "
+"to change."
+msgstr ""
+"Die DEB_HOST_ARCH_CPU- und DEB_HOST_ARCH_OS-Variablen wurden in dpkg-dev "
+"1.13.2 eingeführt. Vorher tendierten die I<debian/rules>-Dateien dazu, die "
+"Werte der DEB_HOST_GNU_CPU- oder DEB_HOST_GNU_TYPE-Variablen zu überprüfen, "
+"die aber Änderungen unterlagen."
 
 #. type: Plain text
 #: ../../man2/dpkg-architecture.1:187
