dpkg-scanpackages: rename --extraoverride into --extra-override
Also fix the help output to be properly indented and fix
load_extra_override() to use its parameter.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8366,8 +8366,8 @@ msgstr "B<-u>, B<--udeb>"
 msgid "B<Obsolete> alias for B<-tudeb>."
 msgstr "B<Veralteter> Alias für B<-tudeb>."
 
-msgid "B<-e>, B<--extraoverride> I<file>"
-msgstr "B<-e>, B<--extraoverride> I<Datei>"
+msgid "B<-e>, B<--extra-override> I<file>"
+msgstr "B<-e>, B<--extra-override> I<Datei>"
 
 msgid ""
 "Scan I<file> to find supplementary overrides. Each line contains 3 space "
