--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -78,7 +78,7 @@ Scan for *.\fItype\fP packages, instead of *.deb.
 .BR \-u ", " \-\-udeb
 \fBObsolete\fP alias for \fB-tudeb\fP.
 .TP
-.BR \-e ", " \-\-extraoverride " \fIfile\fP"
+.BR \-e ", " \-\-extra\-override " \fIfile\fP"
 Scan \fIfile\fP to find supplementary overrides. Each line contains 3
 space separated fields: package name, field name to override, new field value.
 .TP
