dpkg-scansources: implement --extra-override

--- a/man/dpkg-scansources.1
+++ b/man/dpkg-scansources.1
@@ -46,6 +46,10 @@ sources).
 .IP "\fB\-n\fR, \fB\-\-no\-sort\fR" 4
 Don't sort the index records. Normally they are sorted by source package
 name.
+.TP
+.IP "\fB\-e\fR, \fB\-\-extra\-override\fR \fIfile\fP" 4
+Scan \fIfile\fP to find supplementary overrides. Each line contains 3
+space separated fields: package name, field name to override, new field value.
 .IP "\fB\-s\fR, \fB\-\-source\-override\fR \fIfile\fR" 4
 Use \fIfile\fR as the source override file. The default is the name of the
 override file you specified with \fI.src\fR appended.
