deb-extra-override(5): new manual page
Factorize description of the extra override file in a new manual page.
Refer to this manpage in dpkg-scanpackages(1) and dpkg-scansources(1).

--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -79,8 +79,9 @@ Scan for *.\fItype\fP packages, instead of *.deb.
 \fBObsolete\fP alias for \fB-tudeb\fP.
 .TP
 .BR \-e ", " \-\-extra\-override " \fIfile\fP"
-Scan \fIfile\fP to find supplementary overrides. Each line contains 3
-space separated fields: package name, field name to override, new field value.
+Scan \fIfile\fP to find supplementary overrides. See
+.BR deb\-extra\-override (5)
+for more information on its format.
 .TP
 .BR \-a ", " \-\-arch " \fIarch\fP"
 Use a pattern consisting of \fI*_all.deb\fP and \fI*_arch.deb\fP instead of
@@ -106,4 +107,5 @@ maintainer substitutions which do not take effect.
 .BR dpkg (1),
 .BR dselect (1),
 .BR deb\-override (5),
+.BR deb\-extra\-override (5),
 .BR dpkg\-scansources (1).
