Updated Russian translations

--- a/po/ru.po
+++ b/po/ru.po
@@ -1,4 +1,4 @@
-# translation of po_ru.po to Russian
+# translation of dpkg_po_ru.po to Russian
 # Localization file for dpkg and other programs from dpkg package.
 # Copyright (C) 1999 Michael Sobolev
 #
@@ -7,10 +7,10 @@
 # Yuri Kozlov <yuray@komyakino.ru>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.15.0\n"
+"Project-Id-Version: dpkg 1.15.3.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-06-27 19:08+0200\n"
-"PO-Revision-Date: 2009-05-02 19:22+0400\n"
+"PO-Revision-Date: 2009-08-18 21:15+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1027,9 +1027,9 @@ msgid "unable to write new trigger interest file `%.250s'"
 msgstr "не удалось записать в новый файл триггера interest `%.250s'"
 
 #: lib/triglib.c:413
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new trigger interest file `%.250s'"
-msgstr "не удалось создать новый файл триггера interest `%.250s'"
+msgstr "не удалось закрыть новый файл триггера interest `%.250s'"
 
 #: lib/triglib.c:417
 #, c-format
@@ -1053,9 +1053,9 @@ msgid "unable to write new file triggers file `%.250s'"
 msgstr "не удалось записать в новый файл триггеров %.250s"
 
 #: lib/triglib.c:510
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new file triggers file `%.250s'"
-msgstr "не удалось создать новый файл триггеров %.250s"
+msgstr "не удалось закрыть новый файл триггеров %.250s"
 
 #: lib/triglib.c:514
 #, c-format
@@ -1421,7 +1421,7 @@ msgstr ""
 "dpkg: возможны проблемы с удалением %s, поскольку он предоставляет %s...\n"
 
 #: src/archives.c:1046
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: package %s requires reinstallation, but will remove anyway as you "
 "requested.\n"
@@ -2153,9 +2153,9 @@ msgstr ""
 "установки %.250s"
 
 #: src/enquiry.c:393
-#, fuzzy, c-format
+#, c-format
 msgid "obsolete option '--%s', please use '--%s' instead."
-msgstr "устаревший параметр `--%s'\n"
+msgstr "устаревший параметр `--%s', вместо него используйте '--%s'."
 
 #: src/enquiry.c:434
 msgid ""
@@ -3667,7 +3667,6 @@ msgid "unexpected end of line in statoverride file"
 msgstr "неожиданный конец строки в файле statoverride"
 
 #: src/statdb.c:208
-#, fuzzy
 msgid "unexecpted end of line in statoverride file"
 msgstr "неожиданный конец строки в файле statoverride"
 
@@ -4787,9 +4786,9 @@ msgid "part size is far too large or is not positive"
 msgstr "размер части слишком велик или не положителен"
 
 #: dpkg-split/main.c:125
-#, fuzzy, c-format
+#, c-format
 msgid "part size must be at least %d KiB (to allow for header)"
-msgstr "размер части должен быть, по крайней мере, %dКб (размер заголовка)"
+msgstr "размер части должен быть, по крайней мере, %dКБК (размер заголовка)"
 
 #: dpkg-split/queue.c:74
 #, c-format
@@ -6001,12 +6000,3 @@ msgid ""
 msgstr ""
 "пропуск создания %s, так как связанный с ней файл %s (из группы ссылок %s) "
 "не существует."
-
-#~ msgid "failed to open tmpfile (control), %s"
-#~ msgstr "не удалось открыть временный файл (управляющая информация) %s"
-
-#~ msgid "failed to open tmpfile (data), %s"
-#~ msgstr "не удалось открыть временный файл (данные) %s"
-
-#~ msgid "invalid number for --command-fd"
-#~ msgstr "аргумент параметра --command-fd не является числом"
