--- a/dselect/po/ru.po
+++ b/dselect/po/ru.po
@@ -1,16 +1,17 @@
-# translation of ru.po to Russian
+# translation of dselect_ru.po to Russian
 # Localization file for dpkg and other programs from dpkg package.
 # Copyright (C) 1999 Michael Sobolev
 #
 # Michael Sobolev <mss@transas.com>, 1999.
 # Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006, 2007, 2008.
+# Yuri Kozlov <yuray@komyakino.ru>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.19\n"
+"Project-Id-Version: dpkg 1.15.3.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-05-26 01:10+0200\n"
-"PO-Revision-Date: 2008-05-01 12:01+0400\n"
-"Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
+"PO-Revision-Date: 2009-08-18 21:20+0400\n"
+"Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1594,7 +1595,7 @@ msgstr "Доступна информация из файла control"
 
 #: dselect/pkglist.cc:419
 msgid "There are no packages."
-msgstr ""
+msgstr "Пакетов нет."
 
 #: dselect/pkglist.cc:506
 msgid "invalid search option given"
@@ -1689,53 +1690,3 @@ msgstr "Уст.верс."
 #: dselect/pkgtop.cc:301
 msgid "Avail.ver"
 msgstr "Дост.верс."
-
-#~ msgid "Recommended"
-#~ msgstr "Рекомендуемый"
-
-#~ msgid "Contrib"
-#~ msgstr "Добавочный"
-
-#~ msgid "Rec"
-#~ msgstr "Рек"
-
-#~ msgid "Ctb"
-#~ msgstr "Доб"
-
-#~ msgid ""
-#~ "baselist::startdisplay() done ...\n"
-#~ "\n"
-#~ " xmax=%d, ymax=%d;\n"
-#~ "\n"
-#~ " title_height=%d, colheads_height=%d, list_height=%d;\n"
-#~ " thisstate_height=%d, info_height=%d, whatinfo_height=%d;\n"
-#~ "\n"
-#~ " colheads_row=%d, thisstate_row=%d, info_row=%d;\n"
-#~ " whatinfo_row=%d, list_row=%d;\n"
-#~ "\n"
-#~ msgstr ""
-#~ "baselist::startdisplay() выполнен ...\n"
-#~ "\n"
-#~ " xmax=%d, ymax=%d;\n"
-#~ "\n"
-#~ " title_height=%d, colheads_height=%d, list_height=%d;\n"
-#~ " thisstate_height=%d, info_height=%d, whatinfo_height=%d;\n"
-#~ "\n"
-#~ " colheads_row=%d, thisstate_row=%d, info_row=%d;\n"
-#~ " whatinfo_row=%d, list_row=%d;\n"
-#~ "\n"
-
-#~ msgid "[none]"
-#~ msgstr "[нет]"
-
-#~ msgid "error un-catching signal %d: %s\n"
-#~ msgstr "не удалось восстановить старый обработчик сигнала %d: %s\n"
-
-#~ msgid "unable to ignore signal %d before running %.250s"
-#~ msgstr "не удалось проигнорировать сигнал %d перед запуском %.250s"
-
-#~ msgid "(no clientdata)"
-#~ msgstr "(нет данных)"
-
-#~ msgid "<null>"
-#~ msgstr "<пусто>"
