Update german translation of manual pages
Update to 1631t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-08-16 09:28+0200\n"
+"PO-Revision-Date: 2009-08-19 18:53+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1399,6 +1399,69 @@ msgstr ""
 #: ../../man2/deb-override.5:70
 msgid "B<dpkg-scanpackages>(1), B<dpkg-scansources>(1), B<apt-ftparchive>(1)."
 msgstr "B<dpkg-scanpackages>(1), B<dpkg-scansources>(1), B<apt-ftparchive>(1)."
+
+#: ../../man/deb-extra-override.5:1
+#, no-wrap
+msgid "deb-extra-override"
+msgstr "deb-extra-override"
+
+#: ../../man/deb-extra-override.5:1
+#, no-wrap
+msgid "2009-08-16"
+msgstr "2009-08-16"
+
+#: ../../man/deb-extra-override.5:4
+msgid "deb-extra-override - Debian archive extra override file"
+msgstr "deb-extra-override - Debian-Archive Zusatz-override-Datei"
+
+# type: Plain text
+#: ../../man/deb-extra-override.5:12
+msgid ""
+"While most information about a binary/source package can be found in the "
+"control/.dsc file, all of it can be overriden when it's exported to Packages/"
+"Sources files. The extra override file contains those overrides."
+msgstr ""
+"Während der Großteil der Informationen über ein binäres oder Quellpaket in "
+"der Datei control/.dsc gefunden werden kann, kann alles davon überschrieben "
+"werden, wenn es in die Dateien Packages/Sources exportiert wird. Die "
+"Zusatz-override-Datei entält diese »Überschreibungen« (engl. overrides)."
+
+#: ../../man/deb-extra-override.5:16
+msgid ""
+"The extra override file has a simple whitespace-delimited format. Comments "
+"are allowed (denoted with a B<#>)."
+msgstr ""
+"Die Zusatz-override-Datei hat ein einfaches, durch Leerzeichen getrenntes "
+"Format. Kommentare sind erlaubt (angezeigt durch ein B<#>)."
+
+#: ../../man/deb-extra-override.5:21
+msgid "I<package> I<field-name> I<value>"
+msgstr "I<Paket> I<Feldname> I<Wert>"
+
+# type: Plain text
+#: ../../man/deb-extra-override.5:25
+msgid "I<package> is the name of the binary/source package."
+msgstr "I<Paket> ist der Name des Binär-/Quellpakets."
+
+# type: Plain text
+#: ../../man/deb-extra-override.5:31
+msgid ""
+"I<field-name> is the name of the field that is overriden.  I<value> is the "
+"value to put in the field. It can contain spaces as the line is split in no "
+"more than 3 columns when it's parsed."
+msgstr ""
+"I<Feldname> ist der Name des Feldes, das überschrieben wird. I<Wert> ist der "
+"in das Feld zu setzende Wert. Er kann Leerzeichen enthalten, da die Zeile in "
+"nicht mehr als drei Spalten aufgeteilt wird, wenn sie ausgewertet wird."
+
+#: ../../man/deb-extra-override.5:36
+msgid ""
+"The extra override files used to make the official Packages lists may be "
+"found in the I<indices> directory on any Debian mirror."
+msgstr ""
+"Die Zusatz-override-Dateien, die für die Erstellung der offiziellen "
+"Paketliste verwendet werden, können im I<indices>-Verzeichnis auf jedem "
+"Debian-Spiegel gefunden werden."
 
 #. type: TH
 #: ../../man2/deb-shlibs.5:17
@@ -8369,6 +8432,15 @@ msgstr "B<Veralteter> Alias für B<-tudeb>."
 msgid "B<-e>, B<--extra-override> I<file>"
 msgstr "B<-e>, B<--extra-override> I<Datei>"
 
+# type: Plain text
+#: ../../man/dpkg-scanpackages.1:85 ../../man/dpkg-scansources.1:54
+msgid ""
+"Scan I<file> to find supplementary overrides. See B<deb-extra-override>(5)  "
+"for more information on its format."
+msgstr ""
+"Durchsuche I<Datei>, um zusätzliche Overrides zu finden. Lesen Sie "
+"B<deb-extra-override>(5) für weitere Informationen über deren Format."
+
 msgid ""
 "Scan I<file> to find supplementary overrides. Each line contains 3 space "
 "separated fields: package name, field name to override, new field value."
@@ -8422,6 +8494,14 @@ msgstr ""
 "vorkommen, ein Filename-Feld in ihrer Steuerdatei haben, in der Override-"
 "Datei fehlen oder für die Betreuer-Substitutionen vorliegen, die keinen "
 "Effekt haben."
+
+#: ../../man/dpkg-scanpackages.1:111
+msgid ""
+"B<dpkg>(1), B<dselect>(1), B<deb-override>(5), B<deb-extra-override>(5), "
+"B<dpkg-scansources>(1)."
+msgstr ""
+"B<dpkg>(1), B<dselect>(1), B<deb-override>(5), B<deb-extra-override>(5), "
+"B<dpkg-scansources>(1)."
 
 #. type: Plain text
 #: ../../man2/dpkg-scanpackages.1:104
@@ -8570,6 +8650,10 @@ msgstr "B<--debug>"
 #: ../../man2/dpkg-scansources.1:60
 msgid "Turn debugging on."
 msgstr "Schalte Debugging ein."
+
+#: ../../man/dpkg-scansources.1:74
+msgid "B<deb-override>(5), B<deb-extra-override>(5), B<dpkg-scanpackages>(1)."
+msgstr "B<deb-override>(5), B<deb-extra-override>(5), B<dpkg-scanpackages>(1)."
 
 #. type: Plain text
 #: ../../man2/dpkg-scansources.1:68
