--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     Suggested by Christian Perrier <bubulle@debian.org>.
   * On configuration error print file name and line number.
   * Allow quoting values in configuration file options.
+  * Add new --pre-invoke and --post-invoke hooks in dpkg.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
