--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -505,6 +505,20 @@ be marked selected for deinstallation.
 .BR \-E ", " \-\-skip\-same\-version
 Don't install the package if the same version of the package is already
 installed.
+.P
+.BI \-\-pre\-invoke= command
+.br
+.BI \-\-post\-invoke= command
+.RS
+Set an invoke hook \fIcommand\fP to be run via \*(lqsh \-c\*(rq before or
+after the dpkg run for the \fIunpack\fP, \fIconfigure\fP, \fIinstall\fP,
+\fItriggers\-only\fP, \fIremove\fP and \fIpurge\fP dpkg actions. This
+option can be specified multiple times. The order the options are specified
+is preserved, with the ones from the configuration files taking precedence.
+The environment variable \fBDPKG_HOOK_ACTION\fP is set for the hooks to the
+current dpkg action. Note: front-ends might call dpkg several times per
+invokation, which might run the hooks more times than expected.
+.RE
 .TP
 \fB\-\-status\-fd \fR\fIn\fR
 Send machine-readable package status and progress information to file
