Update german translation of manual pages, including a fix from Felix Zielcke
Update to 1635t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-08-19 18:53+0200\n"
+"PO-Revision-Date: 2009-08-21 17:39+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1070,7 +1070,7 @@ msgstr ""
 "Zuerst wird der Anfangsteil jeder Zeichenkette bestimmt, der komplett aus "
 "nicht-Ziffern-Zeichen besteht. Diese zwei Teile (von denen einer leer sein "
 "kann) werden lexikalisch verglichen. Wird ein Unterschied gefunden, wird "
-"dieser zurückgeliefert. Der lexikalische Vergleich ist ein verändertr "
+"dieser zurückgeliefert. Der lexikalische Vergleich ist ein veränderter "
 "Vergleich von ASCII-Werten, bei denen Buchstaben vor allen nicht-Buchstaben "
 "sortiert werden und die Tilde vor allem sortiert wird, sogar vor dem Ende "
 "eines Teiles. So sind zum Beispiel die folgenden Teile in sortierter "
@@ -3158,6 +3158,21 @@ msgstr ""
 msgid "OPTIONS"
 msgstr "OPTIONEN"
 
+#: ../../man/dpkg.1:322
+msgid ""
+"All options can be specified both on the command line and in the B<dpkg> "
+"configuration file I</etc/dpkg/dpkg.cfg> or the files on the configuration "
+"directory I</etc/dpkg/dpkg.cfg.d/>. Each line in the configuration file is "
+"either an option (exactly the same as the command line option but without "
+"leading dashes) or a comment (if it starts with a B<#>)."
+msgstr ""
+"Alle Optionen können auf der Kommandozeile, in der B<dpkg>-"
+"Konfigurationsdatei I</etc/dpkg/dpkg.cfg> oder in den Dateien im "
+"Konfigurationsverzeichnis I</etc/dpkg/dpkg.cfg.d/> angegeben werden. Jede "
+"Zeile in der Konfigurationsdatei ist entweder eine Option (exakt die gleiche "
+"wie die Befehlszeilenoption nur ohne führende Gedankenstriche) oder ein "
+"Kommentar (falls sie mit B<#> beginnt)."
+
 #. type: Plain text
 #: ../../man2/dpkg.1:321
 msgid ""
@@ -5106,6 +5121,10 @@ msgstr ""
 "Option von dpkg sind, abgesehen von den einleitenden Gedankenstrichen, die "
 "hier nicht verwendet werden. Kommentare sind durch Einleiten einer Zeile mit "
 "einem Rautenzeichen (\"B<#>\") erlaubt."
+
+#: ../../man/dpkg.cfg.5:14
+msgid "I</etc/dpkg/dpkg.cfg.d/[0-9a-zA-Z_-]*>"
+msgstr "I</etc/dpkg/dpkg.cfg.d/[0-9a-zA-Z_-]*>"
 
 #. type: Plain text
 #: ../../man2/dpkg.cfg.5:16
@@ -11664,6 +11683,21 @@ msgstr ""
 "das Laufzeitverhalten von B<dselect> zu verändern oder zusätzliche "
 "Informationen über das Programm anzuzeigen."
 
+#: ../../man/dselect.1:52
+msgid ""
+"All options can be specified both on the commandline and in the B<dselect> "
+"configuration file I</etc/dpkg/dselect.cfg> or the files on the "
+"configuration directory I</etc/dpkg/dpkg.cfg.d/>. Each line in the "
+"configuration file is either an option (exactly the same as the commandline "
+"option but without leading dashes) or a comment (if it starts with a B<#>)."
+msgstr ""
+"Alle Optionen k<F6>nnen sowohl auf der Kommandozeile als auch in der "
+"Konfigurationsdatei I</etc/dpkg/dselect.cfg> oder in den Dateien im "
+"Konfigurationsverzeichnis I</etc/dpkg/dpkg.cfg.d/> von B<dselect> angegeben "
+"werden. Jede Zeile in der Konfigurationsdatei ist entweder eine Option "
+"(exakt identisch mit der Kommandozeilenoption, nur ohne einleitende "
+"Gedankenstriche) oder ein Kommentar (falls sie mit B<#> beginnt)."
+
 #. type: Plain text
 #: ../../man2/dselect.1:51
 msgid ""
@@ -12795,6 +12829,10 @@ msgstr ""
 "Option von dselect sind, abgesehen von den einleitenden Gedankenstrichen, "
 "die hier nicht verwendet werden. Kommentare sind durch Einleiten einer Zeile "
 "mit einem Rautenzeichen (»B<#>«) erlaubt."
+
+#: ../../man/dselect.cfg.5:14
+msgid "I</etc/dpkg/dselect.cfg.d/[0-9a-zA-Z_-]*>"
+msgstr "I</etc/dpkg/dselect.cfg.d/[0-9a-zA-Z_-]*>"
 
 #. type: Plain text
 #: ../../man2/dselect.cfg.5:14
