Set DPKG_MAINTSCRIPT_ARCH env var with the .deb architecture
This allows maintainer scripts to know which architecture the package
got built for.

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Stop macthing sparc64-*-* GNU triplets with sparc Debian architecture.
   * Add support for config.d style directories in dpkg and dselect,
     (/etc/dpkg/dpkg.cfg.d and /etc/dpkg/dselect.cfg.d respectively).
+  * Define DPKG_MAINTSCRIPT_ARCH on the maintainer script environment to the
+    architecture the package got built for.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
