--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -609,6 +609,10 @@ The program \fBdpkg\fP will execute when starting a new shell.
 .B COLUMNS
 Sets the number of columns \fBdpkg\fP should use when displaying formatted
 text. Currently only used by \-l.
+.TP
+.B DPKG_MAINTSCRIPT_ARCH
+Defined by \fBdpkg\fP on the maintainer script environment to the
+architecture the package got built for.
 .
 .SH EXAMPLES
 To list packages related to the editor \fBvi\fP(1):
