man: Document DPKG_MAINTSCRIPT_PACKAGE environment variable

--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -610,6 +610,10 @@ The program \fBdpkg\fP will execute when starting a new shell.
 Sets the number of columns \fBdpkg\fP should use when displaying formatted
 text. Currently only used by \-l.
 .TP
+.B DPKG_MAINTSCRIPT_PACKAGE
+Defined by \fBdpkg\fP on the maintainer script environment to the
+package name being handled.
+.TP
 .B DPKG_MAINTSCRIPT_ARCH
 Defined by \fBdpkg\fP on the maintainer script environment to the
 architecture the package got built for.
