Fix typo in German man page
Introduced in commit b05b38151980f0d2f390bf5f91a7ceb206dbe9c8.

Spotted-by: Steve Langasek <vorlon@debian.org>

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -11691,7 +11691,7 @@ msgid ""
 "configuration file is either an option (exactly the same as the commandline "
 "option but without leading dashes) or a comment (if it starts with a B<#>)."
 msgstr ""
-"Alle Optionen k<F6>nnen sowohl auf der Kommandozeile als auch in der "
+"Alle Optionen können sowohl auf der Kommandozeile als auch in der "
 "Konfigurationsdatei I</etc/dpkg/dselect.cfg> oder in den Dateien im "
 "Konfigurationsverzeichnis I</etc/dpkg/dpkg.cfg.d/> von B<dselect> angegeben "
 "werden. Jede Zeile in der Konfigurationsdatei ist entweder eine Option "
