--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-08-21 17:39+0200\n"
+"PO-Revision-Date: 2009-08-23 08:19+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2228,6 +2228,12 @@ msgstr ""
 msgid "dpkg"
 msgstr "dpkg"
 
+#: ../../man/dpkg.1:1 ../../man/dpkg.cfg.5:1 ../../man/dselect.1:1
+#: ../../man/dselect.cfg.5:1
+#, no-wrap
+msgid "2009-08-20"
+msgstr "2009-08-20"
+
 #. type: TH
 #: ../../man2/dpkg.1:1
 #, no-wrap
@@ -4008,6 +4014,34 @@ msgid ""
 msgstr ""
 "Setzt die Anzahl von Spalten die B<dpkg> verwenden soll, wenn es "
 "formatierten Text anzeigt. Derzeit nur von -l verwendet."
+
+#: ../../man/dpkg.1:612
+#, no-wrap
+msgid "B<DPKG_MAINTSCRIPT_PACKAGE>"
+msgstr "B<DPKG_MAINTSCRIPT_PACKAGE>"
+
+# type: Plain text
+#: ../../man/dpkg.1:616
+msgid ""
+"Defined by B<dpkg> on the maintainer script environment to the package name "
+"being handled."
+msgstr ""
+"Wird von B<dpkg> für die Betreuer-Skript-Umgebung auf den in Arbeit "
+"befindlichen Paketnamen gesetzt."
+
+#: ../../man/dpkg.1:616
+#, no-wrap
+msgid "B<DPKG_MAINTSCRIPT_ARCH>"
+msgstr "B<DPKG_MAINTSCRIPT_ARCH>"
+
+# type: Plain text
+#: ../../man/dpkg.1:620
+msgid ""
+"Defined by B<dpkg> on the maintainer script environment to the architecture "
+"the package got built for."
+msgstr ""
+"Wird von B<dpkg> für die Betreuer-Skript-Umgebung auf die Architektur "
+"gesetzt, für die das Paket gebaut wurde."
 
 #. type: Plain text
 #: ../../man2/dpkg.1:611
