man: Use po4a “--previous” support when updating the man pages
Suggested-by: Christian Perrier <bubulle@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     in dpkg man page.
   * Change po4a usage to not create unwated changes depending if doing out or
     in-tree builds.
+  * Use po4a “--previous” support when updating the man pages.
+    Suggested by Christian Perrier <bubulle@debian.org>.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
