dpkg-source(1): small improvement
Give the section name listing source packages formats when we're
referring to it. Thanks to Jari Aalto for the idea.

--- a/debian/changelog
+++ b/debian/changelog
@@ -87,6 +87,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Improve performance of dpkg-shlibdeps by caching minimal version
     associated to each library in Dpkg::Shlib::SymbolFile. Thanks to
     Jiří Paleček <jpalecek@web.de> for the patch.
+  * Slightly improve dpkg-source(1) by giving the section name that we're
+    referring to. Closes: #544037
 
   [ Modestas Vainius ]
   * Provide a meaningful label for dpkg-gensymbols diff.
