Update German translation of manual pages and fix French debian/changelog entry
Update to 1632t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-07-21 18:52+0300\n"
-"PO-Revision-Date: 2009-08-23 08:19+0200\n"
+"PO-Revision-Date: 2009-08-29 15:32+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -9646,6 +9646,21 @@ msgstr ""
 "Kommandozeilenoption(en) I<--format> angegeben sind, das in B<debian/source/"
 "format> bezeichnete Format, »1.0«, »3.0 (native)«. Die verschiedenen "
 "Quellpaketformate sind weiter unten ausführlich beschrieben."
+
+#: dpkg-source.1:64
+msgid ""
+"B<dpkg-source> will build the source package with the first format that "
+"works from this ordered list: the format(s) indicated with the I<--format> "
+"command-line option(s), the format indicated in B<debian/source/format>, "
+"\"1.0\", \"3.0 (native)\". See section B<SOURCE PACKAGE FORMATS> for an "
+"extensive description of the various source package formats."
+msgstr ""
+"B<dpkg-source> wird das Quellpaket mit dem ersten Format aus der folgenden "
+"geordneten Liste bauen, das funktioniert: den Format(en), die mit den "
+"Kommandozeilenoption(en) I<--format> angegeben sind, das in B<debian/source/"
+"format> bezeichnete Format, »1.0«, »3.0 (native)«. Die verschiedenen "
+"Quellpaketformate werden im Abschnitt B<QUELLPAKET-FORMATE> ausführlich "
+"beschrieben."
 
 #. type: SH
 #: ../../man2/dpkg-source.1:72
