Fix translation error in german manpage of dpkg-buildpackage
Reported-by: Joachim Breitner <nomeata@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -89,6 +89,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     Jiří Paleček <jpalecek@web.de> for the patch.
   * Slightly improve dpkg-source(1) by giving the section name that we're
     referring to. Closes: #544037
+  * Fix translation error in german manpage of dpkg-buildpackage. Thanks
+    to Joachim Breitner <nomeata@debian.org>. Closes: #541829
 
   [ Modestas Vainius ]
   * Provide a meaningful label for dpkg-gensymbols diff.
