dpkg-query: Add installed package control path query support
This new command is to be used in special cirmcumstances when the
maintainer scripts, or external programs need to know the paths to an
installed package control files, without needing to hardcode or assume
any file system layout for the dpkg database.

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * On configuration error print file name and line number.
   * Allow quoting values in configuration file options.
   * Add new --pre-invoke and --post-invoke hooks in dpkg.
+  * Add new --control-path command to dpkg-query.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
