man: Document DPKG_RUNNING_VERSION environment variable

--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -1,4 +1,4 @@
-.TH dpkg 1 "2009-08-20" "Debian Project" "dpkg suite"
+.TH dpkg 1 "2009-09-06" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg \- package manager for Debian
 .
@@ -623,6 +623,10 @@ The program \fBdpkg\fP will execute when starting a new shell.
 .B COLUMNS
 Sets the number of columns \fBdpkg\fP should use when displaying formatted
 text. Currently only used by \-l.
+.TP
+.B DPKG_RUNNING_VERSION
+Defined by \fBdpkg\fP on the maintainer script environment to the
+version of the currently running \fBdpkg\fP instance.
 .TP
 .B DPKG_MAINTSCRIPT_PACKAGE
 Defined by \fBdpkg\fP on the maintainer script environment to the
