--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     architecture the package got built for.
   * Document DPKG_MAINTSCRIPT_PACKAGE maintainer script environment variable
     in dpkg man page.
+  * Document DPKG_RUNNING_VERSION maintainer script environment variable
+    in dpkg man page.
   * Change po4a usage to not create unwated changes depending if doing out or
     in-tree builds.
   * Use po4a “--previous” support when updating the man pages.
