--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.4) UNRELEASED; urgency=low
+dpkg (1.15.4) unstable; urgency=low
 
   [ Guillem Jover ]
   * Call _g instead of g_ in dpkg-name.
@@ -128,7 +128,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #542254
   * Swedish (Peter Krefting).
 
- -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
+ -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:37:45 +0200
 
 dpkg (1.15.3.1) unstable; urgency=low
 
