--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.15.5) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200
+
 dpkg (1.15.4) unstable; urgency=low
 
   [ Guillem Jover ]
