Update German scripts translation
Update to 467t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.15.5) UNRELEASED; urgency=low
 
-  *
+  [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
 
  -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200
 
