Update German translation of manual pages
Update to 1641t0f1u.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-08-29 15:32+0200\n"
+"PO-Revision-Date: 2009-09-06 15:41+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2180,10 +2180,9 @@ msgstr "dpkg"
 
 #. type: TH
 #: dpkg.1:1 dpkg-query.1:1
-#, fuzzy, no-wrap
-#| msgid "2009-08-16"
+#, no-wrap
 msgid "2009-09-06"
-msgstr "2009-08-16"
+msgstr "2009-09-16"
 
 #. type: TH
 #: dpkg.1:1 dpkg.cfg.5:1 dpkg-deb.1:1 dpkg-query.1:1 dpkg-trigger.1:1
@@ -3618,17 +3617,13 @@ msgstr ""
 
 #. type: Plain text
 #: dpkg.1:510
-#, fuzzy
-#| msgid "B<-c>I< command>"
 msgid "B<--pre-invoke=>I<command>"
-msgstr "B<-c>I< Befehl>"
+msgstr "B<--pre-invoke=>I<Befehl>"
 
 #. type: Plain text
 #: dpkg.1:512
-#, fuzzy
-#| msgid "B<-c>I< command>"
 msgid "B<--post-invoke=>I<command>"
-msgstr "B<-c>I< Befehl>"
+msgstr "B<--post-invoke=>I<Befehl>"
 
 #. type: Plain text
 #: dpkg.1:521
@@ -3968,21 +3963,17 @@ msgstr ""
 #: dpkg.1:626
 #, no-wrap
 msgid "B<DPKG_RUNNING_VERSION>"
-msgstr ""
+msgstr "B<DPKG_RUNNING_VERSION>"
 
 # type: Plain text
 #. type: Plain text
 #: dpkg.1:630
-#, fuzzy
-#| msgid ""
-#| "Defined by B<dpkg> on the maintainer script environment to the package "
-#| "name being handled."
 msgid ""
 "Defined by B<dpkg> on the maintainer script environment to the version of "
 "the currently running B<dpkg> instance."
 msgstr ""
-"Wird von B<dpkg> für die Betreuer-Skript-Umgebung auf den in Arbeit "
-"befindlichen Paketnamen gesetzt."
+"Wird von B<dpkg> für die Betreuer-Skript-Umgebung auf die Version der aktuell "
+"laufenden Instanz von B<dpkg> gesetzt."
 
 #. type: TP
 #: dpkg.1:630
@@ -5096,10 +5087,9 @@ msgstr "dpkg.cfg"
 
 #. type: TH
 #: dpkg.cfg.5:1 dselect.cfg.5:1
-#, fuzzy, no-wrap
-#| msgid "2009-08-20"
+#, no-wrap
 msgid "2009-09-05"
-msgstr "2009-08-20"
+msgstr "2009-09-05"
 
 #. type: Plain text
 #: dpkg.cfg.5:4
@@ -5108,12 +5098,6 @@ msgstr "dpkg.cfg - dpkg Konfigurationsdatei"
 
 #. type: Plain text
 #: dpkg.cfg.5:11
-#, fuzzy
-#| msgid ""
-#| "This file contains default options for dpkg. Each line contains a single "
-#| "option which is exactly the same as a normal command line option for dpkg "
-#| "except for the leading dashes which are not used here. Comments are "
-#| "allowed by starting a line with a hash sign (\"B<#>\")."
 msgid ""
 "This file contains default options for dpkg. Each line contains a single "
 "option which is exactly the same as a normal command line option for dpkg "
@@ -5124,8 +5108,9 @@ msgstr ""
 "Diese Datei enthält Standardoptionen für dpkg. Jede Zeile enthält eine "
 "einzelne Option, die exakt die gleiche wie für die normalen Kommandozeilen-"
 "Option von dpkg sind, abgesehen von den einleitenden Gedankenstrichen, die "
-"hier nicht verwendet werden. Kommentare sind durch Einleiten einer Zeile mit "
-"einem Rautenzeichen (\"B<#>\") erlaubt."
+"hier nicht verwendet werden. Anführungszeichen (»Quotes«) um Optionswerte "
+"werden entfernt. Kommentare sind durch Einleiten einer Zeile mit einem "
+"Rautenzeichen (\"B<#>\") erlaubt."
 
 #. type: Plain text
 #: dpkg.cfg.5:14
@@ -8110,10 +8095,9 @@ msgstr ""
 
 #. type: TP
 #: dpkg-query.1:49
-#, fuzzy, no-wrap
-#| msgid "B<-I>, B<--info> I<archive> [I<control-file-name>...]"
+#, no-wrap
 msgid "B<-c>, B<--control-path> I<package-name> [I<control-file>]"
-msgstr "B<-I>, B<--info> I<Archiv> [I<Steuer-Dateiname> ...]"
+msgstr "B<-c>, B<--control-path> I<Paketname> [I<Steuerdatei>]"
 
 #. type: Plain text
 #: dpkg-query.1:57
@@ -8125,6 +8109,13 @@ msgid ""
 "It might get deprecated later on if better interfaces or the current "
 "architectural deficiencies have been solved."
 msgstr ""
+"Listet die Pfade für Steuerdateien auf, die von I<Paketname> auf Ihrem System "
+"installiert wurden. Falls I<Steuerdatei> angegeben wurde, liste nur den Pfad "
+"für diese Steuerdatei auf, falls sie existiert. B<Warnung:>: Dieser Befehl "
+"ist halb-öffentlich, er sollte nur als letzter Rettungsanker verwandt werden, "
+"falls keine weitere Schnittstelle verfügbar ist. Er könnte später veraltet "
+"werden, falls bessere Schnittstellen oder die aktuellen, Architektur-"
+"bedingten Defizite gelöst wurden."
 
 #. type: TP
 #: dpkg-query.1:57
@@ -12802,12 +12793,6 @@ msgstr "dselect.cfg - dselect Konfigurationsdatei"
 
 #. type: Plain text
 #: dselect.cfg.5:11
-#, fuzzy
-#| msgid ""
-#| "This file contains default options for dselect. Each line contains a "
-#| "single option which is exactly the same as a normal commandline option "
-#| "for dselect except for the leading dashes which are not used here. "
-#| "Comments are allowed by starting a line with a hash sign (\"B<#>\")."
 msgid ""
 "This file contains default options for dselect. Each line contains a single "
 "option which is exactly the same as a normal commandline option for dselect "
@@ -12818,8 +12803,9 @@ msgstr ""
 "Diese Datei enthält Standardoptionen für dselect. Jede Zeile enthält eine "
 "einzelne Option, die exakt die gleiche wie für die normalen Kommandozeilen-"
 "Option von dselect sind, abgesehen von den einleitenden Gedankenstrichen, "
-"die hier nicht verwendet werden. Kommentare sind durch Einleiten einer Zeile "
-"mit einem Rautenzeichen (»B<#>«) erlaubt."
+"die hier nicht verwendet werden. Anführungszeichen (»Quotes«) um Optionswerte "
+"werden entfernt. Kommentare sind durch Einleiten einer Zeile mit einem "
+"Rautenzeichen (»B<#>«) erlaubt."
 
 #. type: Plain text
 #: dselect.cfg.5:14
