--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 dpkg (1.15.5) UNRELEASED; urgency=low
 
-  [ Updated scripts translations ]
+  [ Updated man page translations ]
+  * German (Helge Kreutzmann).
+
+   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
 
  -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200
