German dselect translation update
Update to 280t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
 dpkg (1.15.5) UNRELEASED; urgency=low
 
+  [ Updated dselect translations ]
+  * German (Sven Joachim).
+
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
 
-   [ Updated scripts translations ]
+  [ Updated scripts translations ]
   * German (Helge Kreutzmann).
 
  -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200
