--- a/dselect/po/de.po
+++ b/dselect/po/de.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.15.0\n"
+"Project-Id-Version: Debian dpkg 1.15.4\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:05+0200\n"
-"PO-Revision-Date: 2009-03-02 17:17+0100\n"
+"PO-Revision-Date: 2009-09-07 10:54+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -869,7 +869,7 @@ msgstr ""
 
 #: dselect/main.cc:176 dselect/main.cc:223
 msgid "<standard output>"
-msgstr ""
+msgstr "<Standardausgabe>"
 
 #: dselect/main.cc:185
 #, c-format
@@ -1127,9 +1127,8 @@ msgid "Press <enter> to continue.\n"
 msgstr "Drücken Sie <Eingabe> zum Fortfahren.\n"
 
 #: dselect/method.cc:183
-#, fuzzy
 msgid "<standard error>"
-msgstr "Schreibfehler auf Standard-Fehlerausgabe"
+msgstr "<Standardfehlerausgabe>"
 
 # CHECKME
 #: dselect/method.cc:186
@@ -1718,15 +1717,3 @@ msgstr "Inst.Ver"
 #: dselect/pkgtop.cc:301
 msgid "Avail.ver"
 msgstr "Verf.Ver"
-
-#~ msgid "Recommended"
-#~ msgstr "Empfohlene"
-
-#~ msgid "Contrib"
-#~ msgstr "Beigesteuerte"
-
-#~ msgid "Rec"
-#~ msgstr "Emp"
-
-#~ msgid "Ctb"
-#~ msgstr "Bei"
